--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>TItulo</h1>
     <p>isso é um paragrafo</p>
     <h2>segundo titulo</h2>
+    <h2>teste</h2>
     <p>segundo paragrafo</p>
     <h3>subtitulo</h3>
     
